# fosiaudio_chilli

./: Cargo.toml  README.md  build.sh  instal_deps.sh  install_deps.sh
etc/systemd/system/: fosiaudio_chilli.service  set_volume_at_startup.service
src/: autogrzybke.html  autogrzybke.rs  autohypys.html  benny.rs  fosiaudio_chilli.html  http_request_handler.rs  jukebox.html  lanparty_features.html  main.rs  player.rs  resource_catalogue.rs  schedule.rs  schedule_default.yaml  volume_controler.rs  volume_controller.rs
