[package]
name = "fosiaudio_chilli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.5.1" ,  features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.10.3"
simple-error = "0.3.0"
tokio = { version = "1", features = ["full"] }
