[package]
name = "fosiaudio_chilli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.5.1" ,  features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.10.3"
tokio = { version = "1", features = ["full"] }
http = "1.0.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
url_encoded_data = "0.6.1"
log = "0.4"
stderrlog = "0.6.0"
tempfile = "3.15.0"
serde_json = "1.0.135"
rand = "0.9.0-beta.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
chrono = { version = "0.4.39", features = ["serde"] }
serde_urlencoded = "0.7.1"
